@@ -83,11 +83,19 @@ bool Collector::memLimitReached = false;
 bool Collector::collecting = false;
 #endif
 
+#if APPLE_CHANGES
+static int numAllocationsSinceLastCollect = 0;
+#endif
+
 void* Collector::allocate(size_t s)
 {
   if (s == 0)
     return 0L;
 
+#if APPLE_CHANGES
+  if (++numAllocationsSinceLastCollect >= KJS_MEM_INCREMENT)
+    collect();
+#else
   // Try and deal with memory requirements in a scalable way. Simple scripts
   // should only require small amounts of memory, but for complex scripts we don't
   // want to end up running the garbage collector hundreds of times a second.
@@ -108,6 +116,7 @@ void* Collector::allocate(size_t s)
       increaseLimitAt *= 2;
     }
   }
+#endif
 
   void *m = malloc(s);
 #ifdef KJS_DEBUG_MEM
@@ -249,6 +258,10 @@ bool Collector::collect()
     }
     block = next;
   }
+
+#if APPLE_CHANGES
+  numAllocationsSinceLastCollect = 0;
+#endif
 
 #if 0
   // This is useful to track down memory leaks
